# voxcomposer

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_submission.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/server/: Dockerfile  README.md  package.json  tsconfig.json
apps/server/prisma/: schema.prisma
apps/server/src/: db.ts  env.ts  index.ts  master.ts  socket.ts  transcode.ts  voxlink.ts
apps/server/src/__tests__/: socket.test.ts  transcode.test.ts  voxlink.test.ts
apps/server/src/routes/: master.ts  projects.ts  transcode.ts
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/public/: vox-host-jsx-runtime.js  vox-host-react.js  vox-host-sdk.js
apps/web/src/: App.tsx  dnd.ts  main.tsx  openExternal.ts  vite-env.d.ts
apps/web/src/audio/: analyze.ts  engine.ts  format.ts  import.ts  registry.ts  sync.ts  wav.ts
apps/web/src/components/: AddDeviceModal.tsx  AppHeader.tsx  AudioSyncPanel.tsx  ClipInspector.tsx  DeviceSidebar.tsx  DevicesView.tsx  EyePreview.tsx  FixturePreview.tsx  GifEyeUploader.tsx  MediaView.tsx  PixelPreview.tsx  ScheduleView.tsx  SendResultModal.tsx  SettingsView.tsx  ShortcutsOverlay.tsx  ShowsView.tsx  Toast.tsx  WaveformThumb.tsx  icons.tsx
apps/web/src/demo/: demoData.ts
apps/web/src/devices/: kind.ts
apps/web/src/fixtures/: vibrary.ts
apps/web/src/gif/: decode.ts  encode.ts  optimize.ts  quantize.ts
apps/web/src/media/: library.ts
apps/web/src/pixel/: engine.ts  wled.ts
apps/web/src/plugins/: api.ts  bake.ts  builtins.tsx  config.ts  homeAssistant.tsx  (+6 more)
docs/: AUDIO_SYNC.md  DESKTOP_PACKAGING.md  HOSTING_DECISION.md  WRITING_A_PLUGIN.md  self-hosting.md
examples/plugins/generic-http/: package.json  tsconfig.json
examples/plugins/home-assistant/: README.md  package.json  tsconfig.json
examples/plugins/philips-hue/: README.md  package.json
examples/plugins/wled/: package.json  tsconfig.json
scripts/: deploy-demo.sh
starter-eyes/: README.md
(+42 files in other folders)
