[package]
name = "voxcomposer-desktop"
version = "0.1.0"
description = "Native desktop wrapper around Vox Composer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Tiny HTTP server used to serve the embedded web build over http://localhost
# from inside the app process. We serve it ourselves (rather than via
# tauri-plugin-localhost) so we control the asset-path lookup exactly and can
# log misses — see src/main.rs. Why a plain-HTTP localhost origin at all:
# docs/DESKTOP_PACKAGING.md (it's what lets the editor open ws:// to a
# VoxMaster; Tauri's native tauri:// origin can't).
tiny_http = "0.12"
# Picks a free TCP port at launch so we never collide with whatever else is
# already listening on the customer's machine.
portpicker = "0.1"
# Opens http(s) links in the system browser — the webview swallows target=_blank.
tauri-plugin-opener = "2"
